2015-02-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_pso): Fix eddsa. Use GPG_KEY_FOR_SIGNING.

2014-12-15  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.4.

2014-12-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/flash.c (flash_key_getpage, flash_key_release_page): New.

	* src/openpgp-do.c (gpg_do_delete_prvkey): New arg.
	(rw_algorithm_attr): Call gpg_do_delete_prvkey with CLEAN_PAGE_FULL.

2014-12-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (build/bignum.o): Specific OPT for this target.

	* src/configure (target): Default is FST-01.
	(--with-dfu): FST-01 doesn't have DFU.  If set, it must be
	mistake.

	* boards/STBEE_MINI: Remove, since it is now supported by Chopstx.

	* test/features/802_get_data_static.feature: Reflect the change
	of extended capabilities.
	* test/features/402_get_data_static.feature: Ditto.
	* test/features/002_get_data_static.feature: Ditto.

	* test/features/003_keyattr_change.feature: New test.

	* src/usb_lld.h: Don't use 'extern' for function declarations.
	* src/usb-icc.c (end_cmd_apdu_data): Fix Le handling.

2014-12-11  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Upgrade to 0.04.
	* src/syc.c: Update from 0.04.

2014-12-10  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-cdh.c: Remove as smartcard only does
	a part of ECDH computation as gpg-agent does.

	* src/chconf.h, src/halconf.h: Remove files needed for ChibiOS/RT.

2014-12-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/call-ec.c (ecc_compute_public): Rename, as we share
	same routine among ECDSA and ECDH.
	(ecdh_decrypt): New.

2014-12-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc.c (compute_kP): Bug fix.  It's P, not G.
	(point_is_on_the_curve): Bug fix.

2014-12-03  Niibe Yutaka  <gniibe@fsij.org>

	Changes for RSA-4096.

	* src/gnuk.h (MAX_CMD_APDU_DATA_SIZE, MAX_RES_APDU_DATA_SIZE):
	Send/Recv buffer should be bigger.
	* polarssl/library/bignum.c (mpi_exp_mod): Don't consume much.
	* polarssl/library/rsa.c (rsa_rsaes_pkcs1_v15_decrypt): buffer