@@ -1,6 +1,14 @@
+2015-02-10  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/openpgp.c (cmd_pso): Fix counter update for EdDSA.  Thanks
+	to Jonathan Schleifer.
+
+	* src/call-rsa.c (rsa_sign): Don't set res_APDU_len.
+	(rsa_decrypt): Likewise, but get OUTPUT_LEN_P as an argument.
+
 2015-02-09  Niibe Yutaka  <gniibe@fsij.org>
 
-	* src/openpgp.c (cmd_pso): Fix eddsa. Use GPG_KEY_FOR_SIGNING.
+	* src/openpgp.c (cmd_pso): Fix EdDSA. Use GPG_KEY_FOR_SIGNING.
 
 2014-12-15  Niibe Yutaka  <gniibe@fsij.org>
 
